--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,12 @@
+:root {
+  --main-font: "Roboto", sans-serif;
+  --secondary-font: "Raleway", sans-serif;
+  --accent-color: #2196f3;
+}
+
+body {
+  font-family: var(--main-font);
+}
 .link {
   text-decoration: none;
 }
@@ -10,9 +19,9 @@
   font-style: normal;
 }
 
+/* ========= COMPONENTS =========*/
 .logo {
-  font-family: Raleway;
-  font-style: normal;
+  font-family: var(--secondary-font);
   font-weight: 700;
   font-size: 26px;
   line-height: 1.2;
@@ -21,15 +30,25 @@
 }
 
 .part-logo {
-  color: #2196f3;
+  color: var(--accent-color);
 }
 
-/* .logo-white {
+.logo-white {
   color: #ffffff;
-} */
+}
 
+.second-title {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+
+  color: #212121;
+}
+/* ========= END COMPONENTS =========*/
+
+/* ========= HEADER =========*/
 .navigation-link {
-  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.15;
@@ -40,11 +59,10 @@
 
 .navigation-link:hover,
 .navigation-link:focus {
-  color: #2196f3;
+  color: var(--accent-color);
 }
 
 .channel-link {
-  font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-size: 14px;
   line-height: 1.15;
@@ -53,17 +71,18 @@
   color: #757575;
 }
 
-.channel-link:hover,
-.channel-link:focus {
-  color: #2196f3;
+.mail:hover,
+.mail:focus {
+  color: var(--accent-color);
 }
+/* ========= END HEADER =========*/
 
+/* ========= HERO =========*/
 .modal-btn {
-  font-family: Roboto;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
-  background: #2196f3;
+  background: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   cursor: pointer;
@@ -76,3 +95,83 @@
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
 }
+
+.main-title {
+  font-weight: 900;
+  font-size: 44px;
+  line-height: 1.36;
+  letter-spacing: 0.06em;
+  text-transform: uppercase;
+
+  /* color: #ffffff; */
+}
+/* ========= END HERO =========*/
+
+/* ========= ADVANTAGES =========*/
+.advantages-list-title {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+
+  color: #212121;
+}
+
+.advantages-list-description {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+
+  color: #757575;
+}
+/* ========= END ADVANTAGES =========*/
+
+/* ========= WHAT WE DO =========*/
+
+/* ========= END WHAT WE DO =========*/
+
+/* ========= OUR TEAM =========*/
+.third-title {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  letter-spacing: 0.03em;
+
+  color: #212121;
+}
+
+.team-list-description {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 1.9;
+  letter-spacing: 0.03em;
+
+  color: #757575;
+}
+/* ========= END OUR TEAM =========*/
+
+/* ========= CONTACT INFORMATION =========*/
+.contact-link-address {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+
+  color: #ffffff;
+}
+
+.contact-link-item {
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+
+  color: rgba(255, 255, 255, 0.6);
+}
+
+.contact-information {
+  background-color: #2f303a;
+}
+/* ========= END CONTACT INFORMATION =========*/
