--- a/css/styles.css
+++ b/css/styles.css
@@ -2,10 +2,12 @@
   --main-font: "Roboto", sans-serif;
   --secondary-font: "Raleway", sans-serif;
   --accent-color: #2196f3;
+  --main-color: #212121;
 }
 
 body {
   font-family: var(--main-font);
+  color: var(--main-color);
 }
 .link {
   text-decoration: none;
@@ -18,7 +20,6 @@ body {
 .address {
   font-style: normal;
 }
-
 /* ========= COMPONENTS =========*/
 .logo {
   font-family: var(--secondary-font);
@@ -42,8 +43,6 @@ body {
   font-size: 36px;
   line-height: 1.17;
   letter-spacing: 0.03em;
-
-  color: #212121;
 }
 /* ========= END COMPONENTS =========*/
 
@@ -54,7 +53,7 @@ body {
   line-height: 1.15;
   letter-spacing: 0.02em;
 
-  color: #212121;
+  color: var(--main-color);
 }
 
 .navigation-link:hover,
@@ -71,8 +70,12 @@ body {
   color: #757575;
 }
 
-.mail:hover,
-.mail:focus {
+.channel-link:hover,
+.channel-link:focus {
+  color: var(--accent-color);
+}
+
+.navigation-link.link.current {
   color: var(--accent-color);
 }
 /* ========= END HEADER =========*/
@@ -82,6 +85,7 @@ body {
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
+  text-align: center;
   background: var(--accent-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
@@ -103,7 +107,11 @@ body {
   letter-spacing: 0.06em;
   text-transform: uppercase;
 
-  /* color: #ffffff; */
+  color: #ffffff;
+}
+
+.hero {
+  background: #2f303a;
 }
 /* ========= END HERO =========*/
 
@@ -114,12 +122,9 @@ body {
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-
-  color: #212121;
 }
 
 .advantages-list-description {
-  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -129,7 +134,6 @@ body {
 /* ========= END ADVANTAGES =========*/
 
 /* ========= WHAT WE DO =========*/
-
 /* ========= END WHAT WE DO =========*/
 
 /* ========= OUR TEAM =========*/
@@ -138,12 +142,9 @@ body {
   font-size: 16px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-
-  color: #212121;
 }
 
 .team-list-description {
-  font-weight: normal;
   font-size: 16px;
   line-height: 1.9;
   letter-spacing: 0.03em;
@@ -154,7 +155,6 @@ body {
 
 /* ========= CONTACT INFORMATION =========*/
 .contact-link-address {
-  font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -163,7 +163,6 @@ body {
 }
 
 .contact-link-item {
-  font-weight: normal;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -175,3 +174,40 @@ body {
   background-color: #2f303a;
 }
 /* ========= END CONTACT INFORMATION =========*/
+
+/* ========= FILTER =========*/
+.filter-works-btn {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.63;
+  text-align: center;
+  letter-spacing: 0.03em;
+  cursor: pointer;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+}
+
+.filter-works-btn:hover,
+.filter-works-btn:focus {
+  background-color: var(--accent-color);
+  color: #ffffff;
+}
+/* ========= END FILTER =========*/
+
+/* ========= OUR WORKS =========*/
+.works-img-name {
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+}
+
+.works-img-description {
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.03em;
+
+  color: #757575;
+}
+/* ========= END OUR WORKS =========*/
