--- a/css/styles.css
+++ b/css/styles.css
@@ -125,6 +125,7 @@ body {
 }
 
 .advantages-list-description {
+  font-weight: 400;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -145,6 +146,7 @@ body {
 }
 
 .team-list-description {
+  font-weight: 400;
   font-size: 16px;
   line-height: 1.9;
   letter-spacing: 0.03em;
@@ -204,6 +206,7 @@ body {
 }
 
 .works-img-description {
+  font-weight: 400;
   font-size: 16px;
   line-height: 1.88;
   letter-spacing: 0.03em;
