Добавляет фоновый цвет кнопкам фильтров и "Наша компанда"

--- a/css/styles.css
+++ b/css/styles.css
@@ -138,6 +138,9 @@ body {
 /* ========= END WHAT WE DO =========*/
 
 /* ========= OUR TEAM =========*/
+.team {
+  background: #f5f4fa;
+}
 .third-title {
   font-weight: 500;
   font-size: 16px;
@@ -188,6 +191,7 @@ body {
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
   border-radius: 4px;
+  background: #f5f4fa;
 }
 
 .filter-works-btn:hover,
