--- a/css/styles.css
+++ b/css/styles.css
@@ -89,6 +89,7 @@ body {
 
 /* ========= HERO =========*/
 .modal-btn {
+  font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
@@ -189,6 +190,7 @@ body {
 
 /* ========= FILTER =========*/
 .filter-works-btn {
+  font-family: inherit;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.63;
