--- a/css/styles.css
+++ b/css/styles.css
@@ -16,6 +16,26 @@ body {
   font-family: var(--main-font);
   color: var(--main-color);
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  margin: 0;
+}
+
+ul,
+ol {
+  margin: 0;
+  padding: 0;
+}
+
+img {
+  display: block;
+}
 .link {
   text-decoration: none;
 }
@@ -98,6 +118,7 @@ body {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
   border-radius: 4px;
   cursor: pointer;
+  border: none;
   color: var(--white-color);
 }
 
